--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cryptography==44.0.3
 distlib==0.3.9
 dnspython==2.7.0
 ecdsa==0.19.1
+exceptiongroup==1.3.0
 fastapi==0.115.12
 filelock==3.18.0
 greenlet==3.2.2
